feat(resilience): 高并发容错 + 免费本地 rerank 集成（ADR-23/24/25）
- ADR-23 高并发韧性：网关作为唯一重试层（SDK max-attempts=1）+ jitter/预算/Retry-After；
  供应商熔断（连续故障开启、冷却后单探针半开）；同步/流式统一并发隔离与超时；
  SSE 订阅生命周期与取消闭环；Redis Lua 原子配额（日配额默认关、防刷默认开）；
  同会话单飞 + 会话归属 fail-closed（V23 conversation_id 唯一约束）
- ADR-24 可观测：统一 Micrometer/OTel → Langfuse OTLP，停用手写 ingestion；默认不采正文
- ADR-25 免费重排：本地 ONNX cross-encoder sidecar（ops/reranker，Apache-2.0，SHA256 校验，
  新增 ModelScope 镜像源适配国内网络）；Java 侧短超时/并发上限/熔断，失败回退原召回序
- 实测（45 例 ground-truth，131 篇/439 块）：重排为负收益 —— 关闭 0.98/0.824、
  不扩窗重排 0.96/0.783、扩窗重排 0.91/0.749；默认保持关闭
  （/admin/rag/retrieve?rerank=true 复用生产重排组件，使评测可覆盖 rerank）
- 修复回归：① 检索器重写致召回退化（0.98→0.91）→ 回退既有实现恢复 0.98/0.824
  ② RAG 入口会话被错标 chat_type=agent 致 ?chatType=love 列表不可见 → 改为按入口显式传类型
  ③ GraphToolLoopTest 误用 mock(MeterRegistry) 违反契约致 NPE → 改用 SimpleMeterRegistry
  ④ 删除无引用重复类 FailurePolicy（保留实际使用的 LlmFailurePolicy）
  ⑤ ADR-23/24/25 在 docs/03 重复两份 → 合并去重
- 验收：单测 149/149；E2E 17/18（话术三级未通过，现象与排除项记录于 docs/09 §8）